--- a/client/src/components/Newsletter/Newsletter.css
+++ b/client/src/components/Newsletter/Newsletter.css
@@ -119,7 +119,7 @@
 
     .NewsletterContainer{
         width: 100vw;
-        max-height: 22vh;
+        max-height: 250px;
         margin: 50px 0;
         padding: 15px 0;
         display: flex;
@@ -130,12 +130,12 @@
     }
     
     .NewsletterTitle{
-        font-size: 4vw;
+        font-size: 36px;
         font-weight: bold;
     }
     
     .NewsletterSubTitle{
-        font-size: 2vh;
+        font-size: 20px;
     }
 
     .FormNewsLetter{
@@ -146,7 +146,7 @@
     }
 
     .FormNewsLetter form {
-        width: 70vw;
+        width: 80%;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -154,7 +154,7 @@
     }
     
     .NewsletterInput{
-        width: 50vw;
+        width: 50%;
         height: 30px;
         padding: 10px;
         border: none;
