--- a/client/src/components/Us/Us.css
+++ b/client/src/components/Us/Us.css
@@ -90,24 +90,24 @@
     }
     
     .UsContainer h1{
-        font-size: 2.5vw;
+        font-size: 36px;
         font-weight: bold;
     }
     
     .UsContainer p{
         width: 80%;
-        font-size: 1.5vw;
+        font-size: 20px;
     }
     
     .TextModal p{
         text-align: center;
-        font-size: 1.2vw;
+        font-size: 1rem;
     }
 
     .ButtonModal{
         min-width: 25%;
-        min-height: 4vh;
-        font-size: 2.5vw;
+        min-height: 25px;
+        font-size: 16px;
         background: black;
         color: white; 
         border-radius: 10px;
@@ -141,18 +141,18 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        margin: 20px 0;
+        margin: 20px 0 30px 0;
         padding: 20px;
     }
     
     .UsContainer h1{
-        font-size: 4vw;
+        font-size: 36px;
         font-weight: bold;
     }
     
     .UsContainer p{
-        width: 80%;
-        font-size: 2vh;
+        width: 70%;
+        font-size: 20px;
     }
     
     .TextModal p{
@@ -162,14 +162,14 @@
 
     .ButtonModal{
         width: 25%;
-        min-height: 4vh;
-        font-size: 2.5vw;
+        min-height: 25px;
+        font-size: 16px;
         background: black;
         color: white; 
         border-radius: 10px;
-        margin-top: 25px;
+        margin-top: 35px;
         position: relative;
-        top: -2vh;
+        /* top: -20px; */
     }
 }
 
@@ -191,43 +191,61 @@
         box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
     }
 
+    .UsContainer{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 10px 0;
+        padding: 20px;
+        /* border: thin solid #00f;     */
+    }
+
+    .UsContainer h1{
+        font-size: 28px;
+        font-weight: bold;
+    }
+    
+    .UsContainer p{
+        width: 70%;
+        font-size: 16px;
+    }
+
     .PortadaModal{
         width: 100%;
-        min-height: 15vh;
+        min-height: 130px;
         position: relative;
-        margin-top: 2vh;
+        margin-top: 10px;
         /* background-image: url(../../assets/adidas-pureboost-dpr.jpg); */
         background-size: cover;
         background-position: center center;
         background-color:black;
     }
 
-    .ButtonModal{
-        position: relative;
-        top: -6vh;
-    }
-    
-    .UsContainer h1{
-        font-size: 5vw;
-        font-weight: bold;
-    }
-
-    .UsContainer p{
-        width: 80%;
-        font-size: 3vw;
-    }
-    
     .TextModal p{
-        font-size: 2.5vh;
-        line-height: 27px;
+        font-size: 1rem;
+        line-height: 22px;
         text-align: center;
         position: relative;
-        top: -4vh;
+        top: -17px;
         margin-bottom: 2vh;
     }
 
     .TitleModal h1{
-        font-size: 6vw;
+        font-size: 2rem;
+    }
+
+    .ButtonModal{
+        width: 150px;
+        min-height: 25px;
+        font-size: 2.5vw;
+        background: black;
+        color: white; 
+        border-radius: 10px;
+        margin-top: 25px;
+        position: relative;
+        top: -2vh;
     }
 
 }
