--- a/api/src/views/prueba.ejs
+++ b/api/src/views/prueba.ejs
@@ -6,51 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/css/prueba.css" rel="stylesheet" type="text/css">
     <title> Mail Transaccional</title>
-    <style>
-
-        .nav {
-            height: 100px;
-
-        }
-        .container {
-    margin: 0 auto;
-    width: 500px;
-    background-color: rgb(231, 16, 16);
-}
-
-.compra {
-    border: 1px solid black;
-    background-color: white;
-
-}
-
-.logo {
-    align-self: center;
-}
-
-.items {
-    list-style-type: none;
-}
-
-.fotos {
-    display: flex;
-    justify-content: space-evenly;
-}
-
-.footer {
-    background-color: white;
-}
-.portada {
-    display: block;
-    margin: auto
-}
-    </style>
 </head>
 <body>
-   
+    <div style='display: flex; justify-content: space-around' class="container nav">
+        <div class='logo'> 
+           
+        </div>
+        <div>
+            <p> Usuario </p>
+        </div>
+    </div>
+
+    
+
      
     <div class="container footer">  
-        <p>Gracias por tu compra <%= data.name %> !! </p>
+        <p>Gracias por tu compra JUAN!! </p>
     </div> 
    
     <div class="container compra">
@@ -58,28 +29,28 @@
 
         <div class="container footer"> 
             <ul class='items'>
-                <% data.pName.map(e => { %>
+                <% ['Air Force 1 Felt GS', 'Air Force 1 Gore Tex High White DS'].map(e => { %>
                     <li> <%= e %> </li>   
                 <% }) %>   
             </ul>
             <div class='fotos'>
-                <% data.pImage.map(e => { %>
-                    <img src=<%= e %> alt='foto' width='100px' height="50px" >
+                <% ['https://i.postimg.cc/1z2wL4GC/Air-Force1-Felt-GS.jpg','https://i.postimg.cc/Dz81j1X4/Air-Force1-Gore-Tex-High-White-DS.jpg'].map(e => { %>
+                    <img src=<%= e %> alt='foto' width='50px' height="25px" >
                 <% } )  %> 
             </div>
          </div>
 
         <p> Envio a domicilio: </p>
-        <p> <%= data.shippingAddress + ' ,' + data.shippingLocated + ' ,' + data.shippingCity %></p> 
-      
+        <p> Caupolican 195, Rincon de Milberg, Tigre</p> 
+        <p> Pagaste: </p>
+        <p> $ 300 </p> 
     </div>
 
     <div class="container footer" > <button style="display: block; margin: 0 auto"> Mis compras </button></div>
 
-    
+    <div class="container footer">
+        <img src="/images/portada.jpg" alt="portada" width='400px' height="100px" class='portada'>
+    </div>
     
 </body>
 </html>
-
-
-    
