Estilos completos Landing sin NavBar

--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -1092,87 +1092,85 @@
     }
 
     .Images{
-        width: 100%;
+        width: 85%;
         height: 400px;
-        display: flex;
+        max-height: 400px;
         flex-direction: row;
         align-items: center;
         justify-content: space-around;
         flex-wrap: wrap;
     }
+    
+    .HomeContent, .HomeContent2, .HomeContent3, .HomeContent4{
+        width: 90%;
+        min-height: 30%;
+        margin: 0 auto;
+        position: relative;
+        top: 25%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        /* opacity: 0; */
+        /* transition: 0.5s ease; */
+    }
 
-    .Title, .Title2, .Title3, .Title4{
-        width: 50%;
-        height: 30%;
-        display: none;
-        padding: 10px;
+   s
+
+    .HomeContent p, .HomeContent2 p, .HomeContent3 p, .HomeContent4 p{
+        width: 90%;
+        margin-top: 10px;
+        font-size: 12px;
         color: #fff;
-        font-size: 22px;
-        border: solid #fff;
-        position: absolute;
-        top: 35%;
-        left: 25%;
+        text-shadow: 0 10px 10px rgba(0,0,0,1);
+    }
+
+    .HomeContent p{
+        width: 90%;
+        margin-top: 10px;
+        font-size: 12px;
+        color: #fff;
+        text-shadow: 0 10px 10px rgba(0,0,0,1);
     }
     
-    .divTitle{
+    .Title, .Title2, .Title3, .Title4{
+        width: 60%;
+        height: 30%;
+        padding: 10px;
+        color: #fff;
+        /* font-size: 26px; */
+        border: solid #fff;
+        text-shadow: 0 10px 10px rgba(0,0,0,1);
+        box-shadow: 0 10px 15px rgba(0,0,0,0.5);
+    }
+
+    .divTitle, .divTitle2, .divTitle3, .divTitle4{
         width: 48%;
         height: 48%;
-        background-image: url('../../assets/nikeAirForce1.jpg');
+        margin: 0 5px 5px 0;
         background-repeat: no-repeat;
         background-position: center center;
         background-size: cover;
         transition: 0.5s all;
     }
 
-    .divTitle:hover .Title{
-        display: block
+    .divTitle{
+        background-image: url('../../assets/nikeAirForce1.jpg');
     }
     
     .divTitle2{
-        width: 48%;
-        height: 48%;
         background-image: url('../../assets/airJordan1.jpg');
-        background-repeat: no-repeat;
-        background-position: center center;
-        background-size: cover;
-        transition: 0.5s all;
-    }
-    
-    .divTitle2:hover .Title2{
-        display: block
-    }
-    
-    .divTitle3{
-        width: 48%;
-        height: 48%;
-        background-image: url('../../assets/yeezy500.jpg');
-        background-repeat: no-repeat;
-        background-position: center center;
-        background-size: cover;
-        transition: 0.5s all;
-    }
-    
-    .divTitle3:hover .Title3{
-        display: block
-    }
-    
-    .divTitle4{
-        width: 48%;
-        height: 48%;
-        margin-left: 3px; 
-        margin-right: 6px; 
-        background-image: url('../../assets/thunderSpectra.jpg');
-        background-repeat: no-repeat;
-        background-position: center center;
-        background-size: cover;
-        transition: 0.5s all;
-    }
-    
-    .divTitle4:hover .Title4{
-        display: block
     }
 
-    .divTitle5, .Title5{ display: none }
+    .divTitle3{
+        background-image: url('../../assets/yeezy500.jpg');
+    }
     
+    
+    .divTitle4{
+        background-image: url('../../assets/thunderSpectra.jpg');
+    }
+    
+    .divTitle5, .Title5, .HomeContent5{ display: none }
+
 
 }
