--- a/client/src/components/Location/Location.css
+++ b/client/src/components/Location/Location.css
@@ -310,7 +310,7 @@
     
     .LocationContainer{
         width: 100vw;
-        height: 875px;
+        min-height: 950px;
         margin: 3vh 0 3vh 0;
         display: flex;
         flex-direction: column;
@@ -329,7 +329,7 @@
     
     .Location{
         width: 100vw;
-        height: 35vh;
+        height: 350px;
     }
     
     .Form{
@@ -341,18 +341,19 @@
     }
     
     .TitleLocation{
-        font-size: 4.5vw;
+        font-size: 32px;
         font-weight: bold;
     }
     
     .SubTitleLocation{
         width: 70vw;
+        margin: 0 auto;
         font-size: 2.5vw;
     }
     
     .Form form{
         width: 88vw;
-        font-size: 2.5vw;
+        font-size: 16px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -360,7 +361,7 @@
     }
 
     .TextAreaFormContact{
-        height: 15vh;
+        height: 150px;
     }
    
 }
@@ -369,8 +370,8 @@
 
     .LocationContainer{
         width: 100vw;
-        min-height: 770px;
-        height: 800px;
+        min-height: 800px;
+        height: 830px;
         margin: 5vh 0 5vh 0;
         display: flex;
         flex-direction: column;
