--- a/client/src/components/MoreRating/MoreRating.css
+++ b/client/src/components/MoreRating/MoreRating.css
@@ -365,3 +365,86 @@
     }
 
 }
+
+@media (max-width: 575px){
+
+    .MoreRatingContainer{
+        width: 100%;
+        min-height: 450px;
+        max-height: 500px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        /* border: thin dotted #f00; */
+    }
+    
+    .MoreRatingContainer h2{
+        font-size: 28px;
+        font-weight: bold;
+    }
+
+    .Zapas{
+        width: 80%;
+        height: 400px;
+        max-height: 450px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        /* border: thin dotted #f00; */
+    }
+    
+    .MoreRatingCard{
+        width: 120px;
+        min-height: 180px;
+        max-height: 200px;
+        border-radius: 10px;
+        /* border: thin dotted #f00; */
+    }
+    
+    .MoreRatingCardImg{
+        width: 100%;
+        max-height: 90px;
+        overflow: hidden;
+        /* border: thin dotted #f00; */
+    }
+    
+    .MoreRatingCardImg img{
+        width: 80%;
+        position: relative;
+        bottom: 10px;
+    }
+    
+    .MoreRatingCardName{
+        width: 100%;
+        height: 40px;
+        font-size: 10px;
+        font-weight: bold;
+        line-height: 15px;
+        /* border: thin dotted #f00; */
+    }
+    
+    .MoreRatingCardPrice{
+        width: 100%;
+        height: 12%;
+        font-size: 14px;
+        font-weight: bold;
+        /* border: thin dotted #f00; */
+    }
+    
+    .MoreRatingCardRate{
+        width: 100%;
+        height: 10%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        /* border: thin dotted #f00; */
+    }
+
+
+
+
+}
