--- a/client/src/components/Slider/Slider.css
+++ b/client/src/components/Slider/Slider.css
@@ -321,10 +321,10 @@
 
     .SliderContainer{
         width: 100vw;
-        min-height: 35vh;
-        height: 35vh;
-        margin: 10vh 0;
-        padding: 7vh 0 10vh 0;
+        min-height: 200px;
+        height: 200px;
+        margin: 50px 0;
+        padding: 10px 0 30px 0;
         display: flex;
         flex-direction: column;
         align-items: center;
